--- a/README.adoc
+++ b/README.adoc
@@ -247,6 +247,20 @@ exec "$@"
 
 ----
 
+=== `with-conda` - runs a command with Python from https://docs.conda.io/en/latest/[Conda] environment
+
+.file::with-conda
+[source,sh]
+----
+#!/usr/bin/env bash
+
+CONDA_PATH="${CONDA_PATH:-/m/opt/miniconda3}"
+export PATH="${CONDA_PATH}/bin:${PATH}"
+
+exec "$@"
+
+----
+
 === `with-pause` - runs a command, then pause and wait for user to input Enter to exit
 
 .file::with-pause
