--- a/README.adoc
+++ b/README.adoc
@@ -254,6 +254,11 @@ exec "$@"
 ----
 #!/usr/bin/env bash
 
+if ! report-missing-executables conda Conda; then
+	exit 1
+fi
+
+
 CONDA_PATH="${CONDA_PATH:-/m/opt/miniconda3}"
 export PATH="${CONDA_PATH}/bin:${PATH}"
 
