--- a/README.adoc
+++ b/README.adoc
@@ -280,7 +280,7 @@ if [[ -z "${CHRUBY_VERSION}" ]]; then
 fi
 
 # Only run with Bash or Zsh
-if [[ -n "${BASH}" -o -n "${ZSH_NAME}" ]]; then
+if [[ -n "${BASH}" || -n "${ZSH_NAME}" ]]; then
 	. /usr/local/share/chruby/chruby.sh
 	. /usr/local/share/chruby/auto.sh
 	chruby ${CHRUBY_VERSION}
