--- a/README.adoc
+++ b/README.adoc
@@ -428,7 +428,7 @@ exec xfce4-terminal "$@"
 ----
 #!/usr/bin/env sh
 
-exec term-emu -e "tmux new-session '${SHELL} -c \"$@\"'"
+exec term-emu -e "tmux new-session '/usr/bin/env with-bash-user -c \"$@\"'"
 
 ----
 
@@ -439,7 +439,7 @@ exec term-emu -e "tmux new-session '${SHELL} -c \"$@\"'"
 ----
 #!/usr/bin/env sh
 
-exec term-emu -e "tmux new-session '${SHELL} -c \"$@\"' \; detach"
+exec term-emu -e "tmux new-session '/usr/bin/env with-bash-user -c \"$@\"' \; detach"
 
 ----
 
