feat: Remove the ; which is not supposed to be there

--- a/README.adoc
+++ b/README.adoc
@@ -439,7 +439,7 @@ exec term-emu -x run-with-termux "/usr/bin/env with-bash-user $*"
 ----
 #!/usr/bin/env sh
 
-exec term-emu -x run-with-termux "/usr/bin/env with-bash-user -c $*" \; detach
+exec term-emu -x run-with-termux "/usr/bin/env with-bash-user $*" \; detach
 
 ----
 
