fix: Only read Guix profile when exists

--- a/README.adoc
+++ b/README.adoc
@@ -209,8 +209,8 @@ export GUIX_LD_WRAPPER_ALLOW_IMPURITIES=n
 export PATH="${HOME}/.config/guix/current/bin:${PATH}"
 export INFOPATH="${HOME}/.config/guix/current/share/info:${INFOPATH}"
 export GUIX_PROFILE="${HOME}/.guix-profile"
-. "${HOME}/.config/guix/current/etc/profile"
-. "${HOME}/.guix-profile/etc/profile"
+[[ -e "${HOME}/.config/guix/current/etc/profile" ]] && . "${HOME}/.config/guix/current/etc/profile"
+[[ -e "${HOME}/.guix-profile/etc/profile" ]] && . "${HOME}/.guix-profile/etc/profile"
 
 XDG_DATA_DIRS="${XDG_DATA_DIRS:-${HOME}/.local/share}"
 XDG_DATA_DIRS="${XDG_DATA_DIRS}:/usr/share:/usr/local/share:${HOME}/.local/share"
