--- a/README.adoc
+++ b/README.adoc
@@ -381,7 +381,7 @@ is set to `/m/9p-fonts/Go Mono/11a/font`.
 #
 
 if (~ $font '') {
-	font='/m/9p-fonts/Go Mono/11a/font'
+	font='/m/9p-fonts/GoMono/11a/font'
 }
 
 mkdir -p /m/acme
