--- a/README.adoc
+++ b/README.adoc
@@ -3426,7 +3426,7 @@ exec sudo -E env "PATH=${PATH}" "$@"
 ----
 #!/usr/bin/env tclsh
 
-if {[catch {exec report-missing-executables awk Awk ag Ag} msg]} {
+if {[catch {exec report-missing-executables awk Awk ag Ag >@ stdout 2>@ stderr} msg]} {
     puts stderr $msg
     exit 3
 }
