--- a/README.adoc
+++ b/README.adoc
@@ -2304,6 +2304,33 @@ exec rofi -modi window -show window
 
 ----
 
+=== `set-1-monitor-default`
+
+.file::set-1-monitor-default
+[source,tcl]
+----
+#!/usr/bin/env tclsh
+
+package require Tcl 8
+package require Tclx
+
+if {[catch {report-missing-executables get-all-randr-outputs get-all-randr-outputs >@ stdout 2>@ stderr}]} {
+   exit 1
+}
+
+set monitors [string trim [exec get-all-randr-outputs]]
+set primaryMonitor [lindex $monitors 0]
+set otherMonitors [lrange $monitors 1 end]
+
+set cmd [list "--output" $primaryMonitor "--auto"]
+foreach monitor $otherMonitors {
+    set cmd [list {*}$cmd "--output" $monitor "--off"]
+}
+
+execl "xrandr" $cmd
+
+----
+
 === `i3-switch-workspace` - workspace switcher for http://i3wm.org/[i3]
 
 Requirement: `dmenu`.
